--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.16.4",
     "@mui/x-data-grid": "^7.10.0",
     "next": "14.2.5",
+    "openai": "^4.52.7",
     "react": "^18",
     "react-dom": "^18"
   },
