--- a/package.json
+++ b/package.json
@@ -16,8 +16,13 @@
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
     "@mui/x-data-grid": "^7.10.0",
+    "@neondatabase/serverless": "^0.9.5",
+    "@vercel/postgres-kysely": "^0.10.0",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.33.0",
     "next": "14.2.5",
     "openai": "^4.52.7",
+    "pg": "^8.13.0",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
@@ -31,11 +36,11 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "drizzle-kit": "^0.24.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "prisma": "^5.18.0",
     "ts-jest": "^29.2.3",
     "ts-node": "^10.9.2",
     "typescript": "^5"
